--- a/Modules/lldb/.vscode/launch.json
+++ b/Modules/lldb/.vscode/launch.json
@@ -8,14 +8,19 @@
       "type": "lldb",
       "request": "launch",
       "program": "${command:cmake.launchTargetPath}",
-      "args": ["@DEBUG_ARGS@"],
+      "args": [
+        "@DEBUG_ARGS@"
+      ],
       "cwd": "${command:cmake.getLaunchTargetDirectory}",
       "env": {
         "VK_LOADER_DEBUG": "@VK_LOADER_DEBUG@",
         "@VK_LAYER_TOGGLE@": "1",
         "VK_ADD_IMPLICIT_LAYER_PATH": "@VK_ADD_IMPLICIT_LAYER_PATH@"
       },
-      "initCommands": ["settings set target.process.stop-on-exec false"]
+      "initCommands": [
+        "settings set target.process.stop-on-exec false"
+      ],
+      "preLaunchTask": "CMake: build"
     }
   ]
 }
