--- a/Modules/vsdbg/.vscode/launch.json
+++ b/Modules/vsdbg/.vscode/launch.json
@@ -8,7 +8,9 @@
       "type": "cppvsdbg",
       "request": "launch",
       "program": "${command:cmake.launchTargetPath}",
-      "args": ["@DEBUG_ARGS@"],
+      "args": [
+        "@DEBUG_ARGS@"
+      ],
       "stopAtEntry": false,
       "cwd": "${command:cmake.getLaunchTargetDirectory}",
       "environment": [
@@ -25,7 +27,8 @@
           "value": "@VK_ADD_IMPLICIT_LAYER_PATH@"
         }
       ],
-      "externalConsole": false
+      "externalConsole": false,
+      "preLaunchTask": "CMake: build"
     }
   ]
 }
