--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -1,7 +1,9 @@
-STATIC(DOTCMAKE_Utils PUBLIC
+STATIC(Utils PUBLIC
     FILE_SET module_files
     TYPE CXX_MODULES
     FILES
-        Utils/Utils.c++)
+        Utils/Utils.c++
+        Utils/Compiler.c++
+)
 
-add_library(DOTCMAKE::Utils ALIAS DOTCMAKE_Utils)
+add_library(cmake::Utils ALIAS Utils)
