--- a/Modules/gdb/.vscode/launch.json
+++ b/Modules/gdb/.vscode/launch.json
@@ -4,7 +4,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug with .cmake",
+      "name": "Debug with gdb",
       "type": "cppdbg",
       "request": "launch",
       "program": "${command:cmake.launchTargetPath}",
