--- a/Modules/lldb/.vscode/launch.json
+++ b/Modules/lldb/.vscode/launch.json
@@ -4,7 +4,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug with .cmake",
+      "name": "Debug with lldb",
       "type": "lldb",
       "request": "launch",
       "program": "${command:cmake.launchTargetPath}",
@@ -17,6 +17,7 @@
         "@VK_LAYER_TOGGLE@": "1",
         "VK_ADD_IMPLICIT_LAYER_PATH": "@VK_ADD_IMPLICIT_LAYER_PATH@"
       },
+      "terminal": "integrated",
       "initCommands": [
         "settings set target.process.stop-on-exec false"
       ],
