Some renaming to reduce ambiguity

--- a/Macros/lldb/.vscode/launch.json
+++ b/Macros/lldb/.vscode/launch.json
@@ -17,7 +17,8 @@
       "initCommands": [
         "settings set target.process.stop-on-exec false"
       ],
-      "preLaunchTask": "CMake: build"
+      "expressions": "native",
+      "preLaunchTask": "CMake: build",
     }
   ]
 }
