Updated setup scripts, fixed .clangd configuration, started deving android toolchain

--- a/Modules/c++/CMakeLists.txt
+++ b/Modules/c++/CMakeLists.txt
@@ -8,4 +8,8 @@ STATIC(.cmake PUBLIC
         Utils/GetFunctionName.c++
 )
 
+if(TARGET __CMAKE::CXX23 OR TARGET __CMAKE::CXX26)
+    target_compile_definitions(.cmake PUBLIC CMAKE_IMPORT_STD=1)
+endif()
+
 add_library(.cmake::Utils ALIAS .cmake)
