--- a/Templates/c++/.vscode/settings.json
+++ b/Templates/c++/.vscode/settings.json
@@ -1,21 +1,25 @@
 {
-  "files.insertFinalNewline": true,
-  "files.trimFinalNewlines": true,
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "C_Cpp.intelliSenseEngine": "disabled",
-  "[cpp]": {
-    "files.insertFinalNewline": true,
-    "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
+  "C_Cpp.intelliSenseEngine" : "disabled",
+  "[cpp]" : 
+  {
+    "editor.defaultFormatter" : "llvm-vs-code-extensions.vscode-clangd",
+    "files.insertFinalNewline" : true
   },
-  "clangd.arguments": [
-    "--header-insertion=never",
-    "--clang-tidy"
-  ],
-  "cmake.useCMakePresets": "always",
-  "output.smartScroll.enabled": false,
-  "files.exclude": {
-    ".cache": true,
-    "build": true,
-  }
+  "[jsonc]" : 
+  {
+    "editor.defaultFormatter" : null
+  },
+  "clangd.arguments" : [ "--header-insertion=never", "--clang-tidy" ],
+  "clangd.path" : "clangd",
+  "cmake.useCMakePresets" : "always",
+  "editor.defaultFormatter" : "esbenp.prettier-vscode",
+  "editor.formatOnSave" : true,
+  "files.exclude" : 
+  {
+    ".cache" : true,
+    "build" : true
+  },
+  "files.insertFinalNewline" : true,
+  "files.trimFinalNewlines" : true,
+  "output.smartScroll.enabled" : false
 }
