Add logcat support in vscode

--- a/Includes/Android/.vscode/launch.json
+++ b/Includes/Android/.vscode/launch.json
@@ -14,7 +14,8 @@
                 "-r",   // Replace apk
                 "-g"    // grant all runtime permissions
             ],
-            "preLaunchTask": "CMake: build",
+            "preLaunchTask": "logcat start",
+            "postDebugTask": "logcat end"
         }
     ]
 }
